Fix square aspect ratios squishing unoccupied points

--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -62,6 +62,7 @@
     --point-primary: solid var(--point-size) var(--primary);
     --point-secondary: solid var(--point-size) var(--secondary);
     position: relative;
+    aspect-ratio: 1;
 
     &::before {
         content: ' ';
